# SnakeGame

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Food.cs  Game.cs  Position.cs  Program.cs  README.md  Snake.cs  SnakeGame.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  main.py  overview.md  pyproject.toml  snake_game.py  snake_game.vcxproj  snake_game.vcxproj.filters
Debug/: snake_game.ilk
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ParallelCustomBuild.command.1.tlog  ParallelCustomBuild.read.1.tlog  ParallelCustomBuild.write.1.tlog
snake_game.dir/Debug/snake_game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  snake_game.lastbuildstate
src/: Board.cpp  Board.h  Food.cpp  Food.h  Game.cpp  Game.h  Input.cpp  Input.h  Snake.cpp  Snake.h  main.cpp
